# microservice-rs

./: Cargo.toml
microservice/: Cargo.toml
microservice-macro/: Cargo.toml
microservice-macro/src/: lib.rs
microservice/src/: config.rs  handler.rs  lib.rs  logging.rs
